# implicit_functions

./: CMakeLists.txt  GeneralFunction.h  Hermite_RBF.h  ImplicitFunction.h  README.md  implicit_functions.cpp  implicit_functions.h
cmake/: implicit_shader.cmake  nlohmann-json.cmake
examples/: primitives.json
include/: GeneralFunction.h  ImplicitFunction.h  ImplicitShader.h  implicit_functions.h  load_functions.h  primitives.h  vector_math.h
src/: load_functions.cpp
